- search mobile slider fixed. - region card's titles overflow fixed. - adding and deleting of regions updating immediately fixed.

--- a/src/components/saved-regions/saved-regions.module.css
+++ b/src/components/saved-regions/saved-regions.module.css
@@ -56,6 +56,9 @@
 .name{
     font: calc(2vw + 2vh) Light;
     text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .degree{
     font: calc(2vw + 2vh) Light;
